fix(backend): configure production CORS correctly